page proposal: style collapse box, fix bugs / oversights

--- a/src/assets/sass/components/multisigDetailsPage.scss
+++ b/src/assets/sass/components/multisigDetailsPage.scss
@@ -135,6 +135,41 @@
       }
     }
   }
+  .owner-actions {
+    .card {
+      border: none;
+      border-radius: unset;
+      border-bottom: 1px solid #f1f1f1 !important;
+
+      .actions-card {
+        padding: 0 40px;
+        .card-header,
+        .card-body {
+          background: unset;
+          padding: 1rem 0;
+        }
+        .card-header {
+          margin-bottom: 20px;
+        }
+        .card-body {
+          padding: 8px 0;
+        }
+        @include media-breakpoint-down(sm) {
+          button {
+            width: 48px;
+          }
+        }
+      }
+      .proposals-content {
+        margin-top: 20px;
+      }
+    }
+    .inset-shadow {
+      padding-top: 10px;
+      box-shadow: inset 0 2px 4px rgba(90, 97, 105, 0.1);
+    }
+  }
+
   .proposals-list {
     .no-active-proposals {
       padding: 40px 0;
@@ -172,6 +207,12 @@
 .btns {
   display: flex;
   gap: 10px;
+  @include media-breakpoint-down(sm) {
+    .name {
+      display: none;
+    }
+  }
+
   .action {
     display: flex;
     font-size: 14px;
@@ -204,11 +245,11 @@
   .remove {
     color: #dc3545;
     background: #f9f2f2;
-    border: 1px solid #f9f2f2;
+    border: 1px solid #ffe2e2;
     box-sizing: border-box;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
     &:hover {
-      background-image: linear-gradient(rgba(77, 169, 255, 0.1) 0 0);
+      background-image: linear-gradient(rgba(220, 53, 69, 0.1) 0 0);
     }
   }
 }
