--- a/src/assets/sass/components/statcard.scss
+++ b/src/assets/sass/components/statcard.scss
@@ -15,11 +15,10 @@
     min-width: 13rem;
   }
   .title {
-    flex: 1;
     color: #9dabbd;
   }
   .actions {
-    flex: 2;
+    flex: 1;
     margin: 0;
     gap: 16px;
   }
