--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -79,7 +79,9 @@ a,
   justify-content: center;
   align-items: center;
 }
-
+.border-n {
+  border: none !important;
+}
 .text {
   color: #9dabbd;
 }
